--- a/QLVatTuPhongThiNghiem/Views/Shared/_Footer.cshtml
+++ b/QLVatTuPhongThiNghiem/Views/Shared/_Footer.cshtml
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 footer-copyright text-center">
-                <p class="mb-0">Copyright 2022 © Cuba theme by pixelstrap  </p>
+                <p class="mb-0">© 2024 Hệ thống quản lý vật tư phòng thí nghiệm - Phiên bản 1.0</p>
             </div>
         </div>
     </div>
