--- a/QLVatTuPhongThiNghiem/Views/_ViewImports.cshtml
+++ b/QLVatTuPhongThiNghiem/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Cuba_Staterkit
-@using Cuba_Staterkit.Models
+﻿@using QLVatTuPhongThiNghiem
+@using QLVatTuPhongThiNghiem.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
